--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 
+
 <head>
 	<title>Naturalness Rating</title>
 
@@ -22,6 +23,9 @@
     <script src="shared/js/utils.js"></script>
     <!-- if you want to draw cute creatures (depends on raphael): -->
     <!-- <script src="shared/js/ecosystem.js"></script> -->
+
+	<!-- utilities to submit data to proliferate -->
+	<script src="https://proliferate.alps.science/static/js/proliferate.js"></script>
 
     <!-- experiment specific helper functions -->
     <!-- <script src="js/local-utils.js"></script> -->
