--- a/experiments/index.html
+++ b/experiments/index.html
@@ -25,7 +25,7 @@
     <!-- <script src="shared/js/ecosystem.js"></script> -->
 
 	<!-- utilities to submit data to proliferate -->
-	<script src="https://proliferate.alps.science/static/js/proliferate.js"></script>
+	<script src="https://proliferate.alps.science/static/js/proliferate.js" type="text/javascript"></script>
 
     <!-- experiment specific helper functions -->
     <!-- <script src="js/local-utils.js"></script> -->
